feat: swagger 文件 - followController.js
