# routes/users.js
@@ -8,18 +8,55 @@ const { checkUserId } = require("../middleware/checkId");
 const { isAuth } = require("../middleware/auth");
 const { upload } = require("../utils/upload");
 
-/* 取得個人所有追蹤列表 */
-router.get("/follows", isAuth, handleErrorAsync(followController.getFollowList));
+/* 取得會員的追蹤列表 */
+router.get("/follows", isAuth, (req, res, next) =>
+/**
+  * #swagger.tags = ['Follows']
+  * #swagger.summary = '取得會員的追蹤列表'
+  * #swagger.security = [{
+      "Bearer": [] 
+    }]
+  */
+/**
+  #swagger.parameters['q'] = {
+    in: 'query',
+    description: '關鍵字',
+    type: 'string',
+  }
+  #swagger.parameters['sort'] = {
+    in: 'query',
+    description: '排序方式，desc 為新至舊，asc 為舊至新',
+    type: 'string',
+  }
+  #swagger.parameters['currentPage'] = {
+    in: 'query',
+    description: '當前頁面',
+    type: 'number',
+  }
+  #swagger.parameters['perPage'] = {
+    in: 'query',
+    description: '一頁顯示資料筆數',
+    type: 'number',
+  }
+  */
+/**
+  #swagger.responses[200] = {
+    description: '取得會員的追蹤列表成功',
+    schema: { $ref: '#/definitions/Follows' }
+  }
+  */
+  followController.getFollowList(req, res, next)
+);
 
 /* 取得會員的個人資料(自己) */
 router.get("/profile", isAuth, (req, res, next) =>
 /**
-   * #swagger.tags = ['Users']
-   * #swagger.summary = '取得會員的個人資料'
-   * #swagger.security = [{
+  * #swagger.tags = ['Users']
+  * #swagger.summary = '取得會員的個人資料'
+  * #swagger.security = [{
       "Bearer": [] 
     }]
-   */
+  */
   /**
     #swagger.responses[200] = {
       description: '取得會員的個人資料成功',
@@ -32,12 +69,12 @@ router.get("/profile", isAuth, (req, res, next) =>
 /* 取得特定會員的個人資料(別人) */
 router.get("/profile/:userId", isAuth, (req, res, next) =>
 /**
-   * #swagger.tags = ['Users']
-   * #swagger.summary = '取得特定會員的個人資料'
-   * #swagger.security = [{
+  * #swagger.tags = ['Users']
+  * #swagger.summary = '取得特定會員的個人資料'
+  * #swagger.security = [{
       "Bearer": [] 
     }]
-   */
+  */
   /**
     #swagger.responses[200] = {
       description: '取得特定會員的個人資料成功',
@@ -50,20 +87,20 @@ router.get("/profile/:userId", isAuth, (req, res, next) =>
 /* 驗證註冊會員 */
 router.post("/sign_up_check", (req, res, next) =>
 /**
-     * #swagger.tags = ['Auth']
-     * #swagger.summary = '驗證註冊會員'
-     */
+  * #swagger.tags = ['Auth']
+  * #swagger.summary = '驗證註冊會員'
+  */
 /**
-      #swagger.parameters['parameter_name'] = {
-        in: 'body',
-        description: '註冊資料',
-        schema: {
-          $email: 'test@gmail.com',
-          $password: 'a1234567',
-          $confirmPassword: 'a1234567',
-        }
-      }
-     */
+  #swagger.parameters['parameter_name'] = {
+    in: 'body',
+    description: '註冊資料',
+    schema: {
+      $email: 'test@gmail.com',
+      $password: 'a1234567',
+      $confirmPassword: 'a1234567',
+    }
+  }
+  */
   /**
     #swagger.responses[201] = {
       description: '驗證成功',
@@ -80,21 +117,21 @@ router.post("/sign_up_check", (req, res, next) =>
 /* 註冊 */
 router.post("/sign_up", (req, res, next) =>
 /**
-     * #swagger.tags = ['Users']
-     * #swagger.summary = '註冊'
-     */
+  * #swagger.tags = ['Users']
+  * #swagger.summary = '註冊'
+  */
 /**
-      #swagger.parameters['parameter_name'] = {
-        in: 'body',
-        description: '註冊資料',
-        schema: {
-          $nickName: '暱稱',
-          $email: 'test@gmail.com',
-          $password: 'a1234567',
-          $confirmPassword: 'a1234567'
-        }
-      }
-     */
+  #swagger.parameters['parameter_name'] = {
+    in: 'body',
+    description: '註冊資料',
+    schema: {
+      $nickName: '暱稱',
+      $email: 'test@gmail.com',
+      $password: 'a1234567',
+      $confirmPassword: 'a1234567'
+    }
+  }
+  */
   /**
     #swagger.responses[201] = {
       description: '註冊成功',
@@ -111,19 +148,19 @@ router.post("/sign_up", (req, res, next) =>
 /* 登入 */
 router.post("/sign_in", (req, res, next) =>
 /**
-     * #swagger.tags = ['Users']
-     * #swagger.summary = '登入'
-     */
+  * #swagger.tags = ['Users']
+  * #swagger.summary = '登入'
+*/
 /**
-      #swagger.parameters['parameter_name'] = {
-        in: 'body',
-        description: '登入資料',
-        schema: {
-          $email: 'test@gmail.com',
-          $password: 'a1234567',
-        }
-      }
-     */
+  #swagger.parameters['parameter_name'] = {
+    in: 'body',
+    description: '登入資料',
+    schema: {
+      $email: 'test@gmail.com',
+      $password: 'a1234567',
+    }
+  }
+  */
   /**
     #swagger.responses[201] = {
       description: '登入成功',
@@ -141,28 +178,47 @@ router.post("/sign_in", (req, res, next) =>
 router.post("/avatar", isAuth, upload, handleErrorAsync(FileController.uploadOneImage));
 
 /* 追蹤朋友(自己 → 別人) */
-router.post("/follows/:userId", isAuth, checkUserId, handleErrorAsync(followController.postFollow));
+router.post("/follows/:userId", isAuth, checkUserId, (req, res, next) =>
+/**
+  * #swagger.tags = ['Follows']
+  * #swagger.summary = '追蹤朋友'
+  * #swagger.security = [{
+    "Bearer": [] 
+  }]
+  */
+  /**
+    #swagger.responses[201] = {
+      description: '追蹤朋友成功',
+      schema: { $ref: '#/definitions/Success' }
+    }
+    #swagger.responses[400] = {
+      description: '追蹤朋友失敗',
+      schema: { $ref: '#/definitions/Error' }
+    }
+  */
+  followController.postFollow(req, res, next)
+);
 
 /* 更新會員密碼 */
 router.patch("/updatePassword", isAuth, (req, res, next) =>
 /**
-     * #swagger.tags = ['Users']
-     * #swagger.summary = '更新會員密碼'
-     * #swagger.security = [{
-        "Bearer": [] 
-      }]
-     */
+  * #swagger.tags = ['Users']
+  * #swagger.summary = '更新會員密碼'
+  * #swagger.security = [{
+    "Bearer": [] 
+  }]
+  */
 /**
-      #swagger.parameters['parameter_name'] = {
-        in: 'body',
-        description: '更新資料',
-        schema: {
-          $password: 'ktv1234567',
-          $confirmPassword: 'ktv1234567',
-          $oldPassword: 'a1234567'
-        }
-      }
-     */
+  #swagger.parameters['parameter_name'] = {
+    in: 'body',
+    description: '更新資料',
+    schema: {
+      $password: 'ktv1234567',
+      $confirmPassword: 'ktv1234567',
+      $oldPassword: 'a1234567'
+    }
+  }
+  */
   /**
     #swagger.responses[201] = {
       description: '更新密碼成功',
@@ -186,15 +242,15 @@ router.patch("/profile/:userId", isAuth, (req, res, next) =>
     }]
   */
 /**
-   #swagger.parameters['parameter_name'] = {
-     in: 'body',
-     description: '更新資料',
-     schema: {
-       $nickName: '兩金勘吉',
-       gender: 1,
-       avatar: 'https://i.imgur.com/xxx.png'
-     }
-   }
+  #swagger.parameters['parameter_name'] = {
+    in: 'body',
+    description: '更新資料',
+    schema: {
+      $nickName: '兩金勘吉',
+      gender: 1,
+      avatar: 'https://i.imgur.com/xxx.png'
+    }
+  }
   */
   /**
    #swagger.responses[201] = {
@@ -209,7 +265,26 @@ router.patch("/profile/:userId", isAuth, (req, res, next) =>
   userController.updateProfile(req, res, next)
 );
 
-/* 取消追蹤(自己 → 別人) */
-router.delete("/follows/:userId", isAuth, checkUserId, handleErrorAsync(followController.deleteFollow));
+/* 取消追蹤朋友(自己 → 別人) */
+router.delete("/follows/:userId", isAuth, checkUserId, (req, res, next) =>
+/**
+  * #swagger.tags = ['Follows']
+  * #swagger.summary = '取消追蹤朋友'
+  * #swagger.security = [{
+      "Bearer": [] 
+    }]
+  */
+  /**
+    #swagger.responses[201] = {
+      description: '取消追蹤朋友成功',
+      schema: { $ref: '#/definitions/Success' }
+    }
+    #swagger.responses[400] = {
+      description: '取消追蹤朋友失敗',
+      schema: { $ref: '#/definitions/Error' }
+    }
+  */
+  followController.deleteFollow(req, res, next)
+);
 
 module.exports = router;
